--- a/01/contato.html
+++ b/01/contato.html
@@ -12,10 +12,7 @@
 
     <h1>contato</h1>
 
-    <p>Telefone
-        (12) 3911-1180
-        (12) 99671-5769
-        
+    <p>Telefone  (12) 3911-1180 (12) 99671-5769
         Email
         contato@textoreescrito.com.br
         
