--- a/01/index.html
+++ b/01/index.html
@@ -4,14 +4,14 @@
     <a href="index.html">Home</a> |
     <a href="empresa.html">empresa</a> |
     <a href="contato.html">contato</a>
-<h1>Home</h1>
+
 </body>
 
 
 
 <body>
     
-    <h1>Luana Maria de Oliveira Costa</h1>
+    <h1>Atividade 1</h1>
     
 
 </body>
