--- a/01/empresa.html
+++ b/01/empresa.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>empresa</title>
+    <title>Empresa</title>
 </head>
 
 <body>
    
     <a href="index.html">Home</a> |
-    <a href="empresa.html">empresa</a> |
-    <a href="contato.html">contato</a>
+    <a href="Empresa.html">empresa</a> |
+    <a href="Contato.html">contato</a>
 
-    <h1>empresa</h1>
+    <h1>Empresa</h1>
 
     <p>Nossa empresa surgiu para atender um mercado cada vez maior de pessoas e empresas que demandam conteúdo textual de qualidade para alcançarem seus objetivos e se diferenciarem no mercado moderno cada vez mais competitivo.
 
