--- a/01/contato.html
+++ b/01/contato.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>contato</title>
+    <title>Contato</title>
 </head>
 
 <body>
    
     <a href="index.html">Home</a> |
-    <a href="empresa.html">empresa</a> |
-    <a href="contato.html">contato</a>
+    <a href="Empresa.html">empresa</a> |
+    <a href="Contato.html">contato</a>
 
-    <h1>contato</h1>
+    <h1>Contato</h1>
 
     <p>Telefone  (12) 3911-1180 (12) 99671-5769
         Email
