--- a/01/index.html
+++ b/01/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
     <a href="index.html">Home</a> |
-    <a href="empresa.html">empresa</a> |
-    <a href="contato.html">contato</a>
+    <a href="Empresa.html">empresa</a> |
+    <a href="Contato.html">contato</a>
 
 </body>
 
@@ -11,7 +11,7 @@
 
 <body>
     
-    <h1>Atividade 1</h1>
+    <h1># Atividade 1 #</h1>
     
 
 </body>
