--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
     <a href="index.html">Home</a> |
-    <a href="empresa.html">empresa</a> |
-    <a href="contato.html">contato</a>
+    <a href="Empresa.html">empresa</a> |
+    <a href="Contato.html">contato</a>
 
 </body>
 
@@ -12,7 +12,7 @@
 <body>
     
     <h1>Luana Maria de Oliveira Costa</h1>
-     <a href="01">Atividade 01 </a> - Links <br>
+     <a href="01"># Atividade 01 #</a> - Links <br>
 
 </body>
 
