--- a/01/empresa.html
+++ b/01/empresa.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Empresa</title>
+    <title>empresa</title>
 </head>
 
 <body>
    
     <a href="index.html">Home</a> |
-    <a href="Empresa.html">empresa</a> |
-    <a href="Contato.html">contato</a>
+    <a href="empresa.html">empresa</a> |
+    <a href="contato.html">contato</a>
 
     <h1>Empresa</h1>
 
