--- a/01/index.html
+++ b/01/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
     <a href="index.html">Home</a> |
-    <a href="Empresa.html">empresa</a> |
-    <a href="Contato.html">contato</a>
+    <a href="empresa.html">empresa</a> |
+    <a href="contato.html">contato</a>
 
 </body>
 
