--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <a href="index.html">Home</a> |
-    <a href="empresa.html">empresa</a> |
-    <a href="contato.html">contato</a>
-
-</body>
-
-
-
-<body>
     
     <h1>Luana Maria de Oliveira Costa</h1>
-     <a href="01"># Atividade 01 #</a> - Links <br>
+     <a href="01" target="_blank"># Atividade 01 #</a> - Links <br>
 
 </body>
 
