--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
     
     <h1>Luana Maria de Oliveira Costa</h1>
-     <a href="01" target="_blank"># Atividade 01 #</a> - Links <br>
+     <a href="01" target="_blank"># Atividade 01 #</a>
 
 </body>
 
