--- a/01/contato.html
+++ b/01/contato.html
@@ -6,9 +6,9 @@
 
 <body>
    
-    <a href="index.html">Home</a> |
-    <a href="empresa.html">empresa</a> |
-    <a href="contato.html">contato</a>
+    <a href="index.html">Home</a> §
+    <a href="empresa.html">Empresa</a> §
+    <a href="contato.html">Contato</a> §
 
     <h1>Contato</h1>
 
