--- a/01/index.html
+++ b/01/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <a href="index.html">Home</a> |
-    <a href="empresa.html">empresa</a> |
-    <a href="contato.html">contato</a>
+  
 
 </body>
+        <a href="index.html">Home</a> §
+        <a href="Empresa.html">Empresa</a> §
+        <a href="Contato.html">Contato</a> §
 
 
 
 <body>
     
-    <h1># Atividade 1 #</h1>
+    <h1>#Atividade 01#</h1>
+   
     
 
 </body>
 
 </html>
-
-
