--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
+
 <html>
+<head>
+    <title>Luana Oliveira</title>
+</head>
+
 <body>
-    
-    <h1>Luana Maria de Oliveira Costa</h1>
+
+    <h1>§ Luana Maria de Oliveira Costa §</h1>
+
      <a href="01" target="_blank"># Atividade 01 #</a>
 
 </body>
