--- a/01/empresa.html
+++ b/01/empresa.html
@@ -2,15 +2,37 @@
 <html>
 <head>
     <title>empresa</title>
+    <style>
+        body{
+            background: -webkit-linear-gradient(left,#ff9a9a98, #ffa9c463);
+           background: -o-linear-gradient(right,#ff9a9a96, #ffa9c463);
+            background: -moz-radial-gradient(right,#ff9a9a96, #ffa9c4a6);
+            background: linear-gradient(to right,#ff9a9a96, #ffa9c4a6);
+            background-color: #ff9a9a96;
+        }
+        h1{
+            background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+            background-color: #ffdcdcfb;
+        }
+
+        p{background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+            background-color: #ffdcdcfb;
+
+        }
+       
+
+</style>
 </head>
 
 <body>
-   
+
     <a href="index.html">Home</a> §
     <a href="empresa.html">Empresa</a> §
     <a href="contato.html">Contato</a> §
 
     <h1>Empresa</h1>
+
+    <img src="imagem.pgn" alt="pgn-imagem.pgn">
 
     <p>Nossa empresa surgiu para atender um mercado cada vez maior de pessoas e empresas que demandam conteúdo textual de qualidade para alcançarem seus objetivos e se diferenciarem no mercado moderno cada vez mais competitivo.
 
