--- a/01/index.html
+++ b/01/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body>    
+    <style>
+    body{
+        background: -webkit-linear-gradient(left,#ff9a9a98, #ffa9c463);
+       background: -o-linear-gradient(right,#ff9a9a96, #ffa9c463);
+        background: -moz-radial-gradient(right,#ff9a9a96, #ffa9c4a6);
+        background: linear-gradient(to right,#ff9a9a96, #ffa9c4a6);
+        background-color: #ff9a9a96;
+    }
+    h1{
+        background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+        background-color: #ffdcdcfb;
+    }
+
+    p{background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+        background-color: #ffdcdcfb;
+
+    }
+   
+
+</style>
+
   
 
 </body>
