--- a/01/contato.html
+++ b/01/contato.html
@@ -2,21 +2,39 @@
 <html>
 <head>
     <title>contato</title>
+
+    <style>
+        body{
+            background: -webkit-linear-gradient(left,#ff9a9a98, #ffa9c463);
+           background: -o-linear-gradient(right,#ff9a9a96, #ffa9c463);
+            background: -moz-radial-gradient(right,#ff9a9a96, #ffa9c4a6);
+            background: linear-gradient(to right,#ff9a9a96, #ffa9c4a6);
+            background-color: #ff9a9a96;
+        }
+        h1{
+            background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+            background-color: #ffdcdcfb;
+        }
+
+        p{background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+            background-color: #ffdcdcfb;
+
+        }
+       
+
+</style>
 </head>
 
 <body>
-   
     <a href="index.html">Home</a> §
     <a href="empresa.html">Empresa</a> §
     <a href="contato.html">Contato</a> §
 
     <h1>Contato</h1>
 
-    <p>Telefone  (12) 3911-1180 (12) 99671-5769
-        Email
-        contato@textoreescrito.com.br
-        
-        Endereço
+    <p>Telefone:  (86) 9 9995- 99868 </p>
+    <p>Email: catzs.2021112linf0123@aluno.ifpi.edu.br § LuanaM@gmail.com </p>
+    <p> Endereço :
         Av. Adhemar de Barros, Nº 566, Sala 1003
         São José dos Campos.</p>
 
