--- a/01/index.html
+++ b/01/index.html
@@ -26,8 +26,8 @@
 
 </body>
         <a href="index.html">Home</a> §
-        <a href="Empresa.html">Empresa</a> §
-        <a href="Contato.html">Contato</a> §
+        <a href="empresa.html">Empresa</a> §
+        <a href="contato.html">Contato</a> §
 
 
 
