--- a/01/index.html
+++ b/01/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
 <body>    
     <style>
     body{
-        background: -webkit-linear-gradient(left,#ff9a9a98, #ffa9c463);
-       background: -o-linear-gradient(right,#ff9a9a96, #ffa9c463);
-        background: -moz-radial-gradient(right,#ff9a9a96, #ffa9c4a6);
-        background: linear-gradient(to right,#ff9a9a96, #ffa9c4a6);
+        background:-webkit-linear-gradient(left,#ff9a9a98, #ffa9c463);
+        background:-o-linear-gradient(right,#ff9a9a96, #ffa9c463);
+        background:-moz-radial-gradient(right,#ff9a9a96, #ffa9c4a6);
+        background:linear-gradient(to right,#ff9a9a96, #ffa9c4a6);
         background-color: #ff9a9a96;
     }
     h1{
@@ -16,23 +17,20 @@
 
     p{background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
         background-color: #ffdcdcfb;
-
     }
-   
-
-</style>
-
-  
+   </style>
 
 </body>
-        <a href="index.html">Home</a> §
-        <a href="empresa.html">Empresa</a> §
-        <a href="contato.html">Contato</a> §
 
-
-
-<body>
+</head>
     
+<body>
+    <a href="index.html">Home</a> §
+    <a href="empresa.html">Empresa</a> §
+    <a href="contato.html">Contato</a> §
+
+   
+   
     <h1>#Atividade 01#</h1>
    
     
