--- a/01/empresa.html
+++ b/01/empresa.html
@@ -31,7 +31,7 @@
 
     <h1>Empresa</h1>
 
-    <img src="imagem.pgn" alt="pgn-imagem.pgn">
+    <img src="imagem.pgn" alt="pgn-imagem.pgn"/>
 
     <p>Nossa empresa surgiu para atender um mercado cada vez maior de pessoas e empresas que demandam conteúdo textual de qualidade para alcançarem seus objetivos e se diferenciarem no mercado moderno cada vez mais competitivo.
 
