--- a/01/empresa.html
+++ b/01/empresa.html
@@ -17,7 +17,9 @@
 
         p{background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
             background-color: #ffdcdcfb;
-
+        }
+        .Empresa{
+            background-color: white;
         }
        
 
@@ -32,11 +34,15 @@
     <h1>Empresa</h1>
 
     <img src="imagem.pgn" alt="pgn-imagem.pgn"/>
-
+  
+    <div class="Empresa">
     <p>Nossa empresa surgiu para atender um mercado cada vez maior de pessoas e empresas que demandam conteúdo textual de qualidade para alcançarem seus objetivos e se diferenciarem no mercado moderno cada vez mais competitivo.
 
      Nossa equipe operacional é formada por editores, revisores, escritores, ghost writers e copywriters, pós-graduados, mestres e doutores, com formação em humanas, exatas e biológicas e amplo e profundo conhecimento teórico e prático em suas áreas de atuação.</p>
+    </div> 
+
 </body>
+
 
 </html>
 
