--- a/01/empresa.html
+++ b/01/empresa.html
@@ -18,7 +18,7 @@
         p{background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
             background-color: #ffdcdcfb;
         }
-        .Empresa{
+        div{
             background-color: white;
         }
        
