--- a/01/empresa.html
+++ b/01/empresa.html
@@ -14,9 +14,13 @@
             background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
             background-color: #ffdcdcfb;
         }
-        
+
         div{
             background-color: white;
+            text-align: center;
+            margin-left: 200px;
+            margin-right: 200px;
+
         }
        
 
