--- a/01/contato.html
+++ b/01/contato.html
@@ -3,7 +3,7 @@
 <head>
     <title>contato</title>
 
-    <style>
+<style>
         body{
             background: -webkit-linear-gradient(left,#ff9a9a98, #ffa9c463);
            background: -o-linear-gradient(right,#ff9a9a96, #ffa9c463);
@@ -14,30 +14,38 @@
         h1{
             background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
             background-color: #ffdcdcfb;
+            text-align: center;
         }
-
-        p{background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+        .Contato{
+            background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
             background-color: #ffdcdcfb;
+            text-align: center;
+            margin-left: 200px;
+            margin-right:200px;
+            border-radius:0.5%;
 
         }
        
-
 </style>
+
 </head>
 
 <body>
     <a href="index.html">Home</a> §
     <a href="empresa.html">Empresa</a> §
     <a href="contato.html">Contato</a> §
-
-    <h1>Contato</h1>
-
+   
+    <div class="titulo">
+    <h1>§ Contato §</h1>
+    </div>
+    
+    <div class="Contato"> 
     <p>Telefone:  (86) 9 9995- 99868 </p>
     <p>Email: catzs.2021112linf0123@aluno.ifpi.edu.br § LuanaM@gmail.com </p>
     <p> Endereço :
         Av. Adhemar de Barros, Nº 566, Sala 1003
         São José dos Campos.</p>
-
+    </div>
 </body>
 
 </html>
