--- a/01/index.html
+++ b/01/index.html
@@ -13,6 +13,7 @@
     h1{
         background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
         background-color: #ffdcdcfb;
+        text-align: center;
     }
 
     p{background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
@@ -31,7 +32,7 @@
 
    
    
-    <h1>#Atividade 01#</h1>
+    <h1>§Atividade 01§</h1>
    
     
 
