--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
         h1{
             background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
             background-color: #ffdcdcfb;
+            text-align: center;
+        }
+        div{
+            text-align: center;
+            background-color: whitesmoke;
+            margin-left:300px;
+            margin-right:300px;
+            margin-top:100px;
+            margin-bottom:300px ;
+            border-radius: 70%;
+            padding: 10%;
+
         }
        
 
@@ -24,9 +36,9 @@
 <body>
     <h1>§ Luana Maria de Oliveira Costa §</h1>
     
-
+    <div> 
      <a href="01" target="_blank"># Atividade 01 #</a>
-
+    </div>
 </body>
 
 </html>
