--- a/01/empresa.html
+++ b/01/empresa.html
@@ -23,7 +23,8 @@
             margin-right: 200px;
             border-radius: 0.5cm;
             padding: 10px;
-            border: rgb(248, 69, 99);
+            border-color: black;
+            border-width: 10cm;
         }
         img{
             width: 50%;
