--- a/01/empresa.html
+++ b/01/empresa.html
@@ -14,6 +14,8 @@
             background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
             background-color: #ffdcdcfb;
             text-align: center;
+            font-family:'Times New Roman', Times, serif;
+            font-style: italic;
         }
 
         .Empresa{
