--- a/01/index.html
+++ b/01/index.html
@@ -32,6 +32,9 @@
          background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
          background-color: #ffdcdcfb;
          border-radius: 1%;
+         font-family:'Times New Roman', Times, serif;
+         font-style: italic;
+         font-color: #b3023a;
 
         }
   
