--- a/01/contato.html
+++ b/01/contato.html
@@ -15,6 +15,8 @@
             background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
             background-color: #ffdcdcfb;
             text-align: center;
+            font-family:'Times New Roman', Times, serif;
+            font-style: italic;
         }
         .Contato{
             background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
