--- a/index.html
+++ b/index.html
@@ -31,16 +31,18 @@
             background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
             background-color: #ffdcdcfb;
             text-align: center;
+            font-family:'Times New Roman', Times, serif;
+            font-style: italic;
         }
         .link{
             text-align: center;
-            background-color: whitesmoke;
-            margin-left:300px;
-            margin-right:300px;
-            margin-top:100px;
-            margin-bottom:300px ;
-            border-radius: 70%;
-            padding: 10%;
+            background-color: rgb(230, 218, 218);
+            margin-left:700px;
+            margin-right:700px;
+            margin-top:50px;
+            margin-bottom:200px ;
+            border: 45px;
+            padding:5px;
             }
        
 
