--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
         }
         .link{
             text-align: center;
-            background-color: rgb(230, 218, 218);
-            margin-left:700px;
-            margin-right:700px;
-            margin-top:50px;
+            background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+            background-color: #ffdcdcfb;
+            margin-left:500px;
+            margin-right:500px;
+            margin-top:100px;
             margin-bottom:200px ;
-            border: 45px;
-            padding:5px;
+            border: 10px;
+            padding:10px;
             }
        
 
