--- a/04/index.html
+++ b/04/index.html
@@ -44,13 +44,9 @@
 </head>
     
 <body>
-    <a href="index.html">Home</a> §
-    <a href="empresa.html">Empresa</a> §
-    <a href="contato.html">Contato</a> §
-
    
    <div>
-    <h1>§Atividade 01§</h1>
+    <h1>§Atividade 04</h1>
    </div>
     
 
