--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
     </div> 
 
     <div class="link"> 
-    <a href="01" target="_blank"># Atividade_01 #</a> - Links <br>
-
-     <a href="01" target="_blank"># Atividade_02 #</a>  <br>
-     
+    
+    <a href="01" target="_blank"># Atividade_01 #</a> § Links § <br>
+    <hr>
+    <a href="01" target="_blank"># Atividade_02 #</a> § Mais Tags HTML § <br>
+     <hr>
      <a href="01" target="_blank"># Atividade_03 #</a>  <br>
-
+     <hr>
      <a href="01" target="_blank"># Atividade_04 #</a>  <br>
 
     </div>
