--- a/02/index.html
+++ b/02/index.html
@@ -48,7 +48,31 @@
    <div>
     <h1>§Atividade 02§</h1>
    </div>
-    
+    <hr>
+   <div>
+    Está palavra está em <b>negrito!</b> 
+    <hr>
+    Persista com coragem, <br>
+    abraçando os desafios.
+    <hr>
+    <p>Pesista com coragem,</p>
+    <p>abraçando os desafios. </p>
+    <hr>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+    <hr>
+    <ol>
+        <li>Primeiro</li>
+        <li>Segundo</li>
+        <li>Terceiro</li>
+    </ol>
+    <hr>
+    <img height="30px" src="IFPI.pgn.png" alt="imagem.pgn"/>
+
+</div>
 
 </body>
 
