--- a/02/index.html
+++ b/02/index.html
@@ -28,13 +28,37 @@
        
 
     div{
-        text-align: center;
          background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
          background-color: #ffdcdcfb;
-         border-radius: 1%;
          font-family:'Times New Roman', Times, serif;
          font-style: italic;
+         text-align: center;
+    }
+
+    .texto{
+        background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+         background-color: #ffdcdcfb;
+         font-family:'Times New Roman', Times, serif;
+         font-style: italic;
+         text-align: center;
+         margin-left: 200px;
+         margin-right: 200px;
+        padding: 1px;
         }
+     .image{ 
+        background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+         background-color: #ffdcdcfb;
+         font-family:'Times New Roman', Times, serif;
+         font-style: italic;
+         text-align:left;
+         margin-left: 200px;
+         margin-right: 200px;
+         padding: 1px;
+          }
+
+
+    
+
   
   </style>
 
@@ -48,8 +72,8 @@
    <div>
     <h1>§Atividade 02§</h1>
    </div>
-    <hr>
-   <div>
+
+   <div class="texto">
     Está palavra está em <b>negrito!</b> 
     <hr>
     Persista com coragem, <br>
@@ -58,6 +82,9 @@
     <p>Pesista com coragem,</p>
     <p>abraçando os desafios. </p>
     <hr>
+   </div>
+   
+   <div class="image">
     <ul>
         <li>Item 1</li>
         <li>Item 2</li>
@@ -70,9 +97,12 @@
         <li>Terceiro</li>
     </ol>
     <hr>
-    <img height="30px" src="IFPI.pgn.png" alt="imagem.pgn"/>
-
+   </div>
+   
+   <div class="texto">
+    <img height="70px" src="IFPI.pgn.png" alt="imagem.pgn"/>
 </div>
+
 
 </body>
 
