--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
      <a href="03" target="_blank"># Atividade_03 #</a>  <br>
      <hr>
      <a href="04" target="_blank"># Atividade_04 #</a>  <br>
+    <hr>
+     <a href="9" target="_blank"># Atividade_09 #</a> § Posicionamento § <br>
+
 
     </div>
 
