--- a/9/index.html
+++ b/9/index.html
@@ -1,39 +1,70 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade 09</title>
+ <title>Atividade 09</title>
+<meta charset= "utf-8" />
+<style type= "text/css">
+</style>
+    
+<body>    
     <style>
-        body{
-            background: #d6d6d6;
+        <title>Atividade 09</title>
+    body{
+       -webkit-animation: colorchange 60s infinite;
+        animation: colorchange 60s infinite;
+    }
+    @-webkit-keyframes colorchange {
+        0% {background: #ffa1c1;}
+        25% {background: #f53eaf;}
+        40% {background: rgb(255, 98, 98)}
+        60% {background: rgb(250, 106, 250)}
+        80% {background: rgb(248, 248, 143)}
+        90% {background: #ffa1c1;}
+        100% {background: #fdd3e1;}
+    }
+    @keyframes colorchange {
+        0% {background: #ffa1c1;}
+        25% {background: #f53eaf;}
+        40% {background: rgb(255, 98, 98)}
+        60% {background: rgb(250, 106, 250)}
+        80% {background: rgb(248, 248, 143)}
+        90% {background: #ffa1c1;}
+        100% {background: #fdd3e1;}
         }
+       
 
-        .container p{
-            clear: both;
-            padding: 10px;
-            align-content: center;
+    div{
+         background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+         background-color: #ffdcdcfb;
+         font-family:'Times New Roman', Times, serif;
+         font-style: italic;
+         text-align: center;
+    }
 
+    .texto{
+        background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+         background-color: #ffdcdcfb;
+         font-family:'Times New Roman', Times, serif;
+         font-style: italic;
+         text-align: center;
+         margin-left: 200px;
+         margin-right: 200px;
+        padding: 1px;
         }
+     .image{ 
+        background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+         background-color: #ffdcdcfb;
+         font-family:'Times New Roman', Times, serif;
+         font-style: italic;
+         text-align:left;
+         margin-left: 200px;
+         margin-right: 200px;
+         padding: 1px;
+          }
 
-        .foto {
-            width: 550px;
-        }
-        .card{
-            font-family: 'opensans-regular', Arial, sans-serif;
-            background-color: #F5F5DC;
-            border: 1px solid black;
-            color: #333;
-            text-align: center;
-            font-size: 14px;
-            padding: 5px;
-            margin: 10px;
-        }
-        .paragrafo{
-            text-align: justify;
-        }
-        </style>
+  </style>
 </head>
+
 <body>
     <div class="container">
         <div class="card">
