--- a/9/index.html
+++ b/9/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Atividade 09</title>
-<meta charset= "utf-8" />
-<style type= "text/css">
-</style>
-    
 <body>    
     <style>
         <title>Atividade 09</title>
@@ -67,12 +62,10 @@
 
 <body>
     <div class="container">
-        <div class="card">
-            <img class="foto" src="imagem/Captura de tela 2024-04-11 114256.png">
+        <div class="card"
             <a href="atividade_a.html"><h2>Atividade A</h2></a>
         </div>
         <div class="card">
-            <img class="foto" src="imagem/Captura de tela 2024-04-11 114240.png">
             <a href="atividade_b.html"><h2>Atividade B</h2></a>
         </div>      
     </div>
