--- a/9/index.html
+++ b/9/index.html
@@ -61,11 +61,10 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="card"
+    <div>
             <a href="atividade_a.html"><h2>Atividade A</h2></a>
         </div>
-        <div class="card">
+    <div>
             <a href="atividade_b.html"><h2>Atividade B</h2></a>
         </div>      
     </div>
