--- a/9/atividade_b.html
+++ b/9/atividade_b.html
@@ -10,7 +10,7 @@
             position: absolute;
             width: 100%;
             height: 10%;
-            background: red;
+            background:#fc6f65;
             top: 0%;
             left: 0px;
             right: 0px;
@@ -21,7 +21,7 @@
             position: absolute;
             width: 100%;
             height: 15%;
-            background: blue;
+            background:#9fb2fc;
             top:10%;
             left: 0px;
             right: 0px;
@@ -30,7 +30,7 @@
         }
         #content{
             position: absolute;
-            background: green;
+            background:#758f65;
             width: 60%;
             height: 100%;
             left: 0%;
@@ -40,7 +40,7 @@
             align-content: center;
         }
         #sidebar{
-            background: rgb(245, 203, 104);
+            background: rgb(245, 157, 157);
             position: fixed;
             width: 40%;
             height: 75%;
@@ -51,7 +51,7 @@
             align-content: center;
         }
         #footer{
-            background: rgb(239, 153, 250);
+            background: rgb(235,222,106);
             position: absolute;
             width: 100%;
             height: 10%;
