--- a/9/atividade_a.html
+++ b/9/atividade_a.html
@@ -10,7 +10,7 @@
             position: fixed;
             width: 100%;
             height: 15%;
-            background:blue;
+            background:#6ab9eb;
             top:0px;
             left: 0px;
             right: 0px;
@@ -22,7 +22,7 @@
             position: absolute;
             width: 100%;
             height: 10%;
-            background:red;
+            background:#d64242;
             top: 15%;
             left: 0px;
             right: 0px;
@@ -30,7 +30,7 @@
             align-content: center;
         }
         #center{
-            background: green;
+            background:#5ec93a;
             position: absolute;
             width: 50%;
             height: 100%;
@@ -41,7 +41,7 @@
             align-content: center;
         }
         #left{
-            background: rgb(253, 253, 165);
+            background: rgb(240, 152, 137);
             position: absolute;
             width: 25%;
             height: 100%;
@@ -52,7 +52,7 @@
             align-content: center;
         }
         #right{
-            background: rgb(241, 204, 105);
+            background: rgb(250, 241, 140);
             position: absolute;
             width: 25%;
             height: 100%;
