--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
      <a href="04" target="_blank"># Atividade_04 #</a>  <br>
     <hr>
      <a href="9" target="_blank"># Atividade_09 #</a> § Posicionamento § <br>
+    <hr>
+     <a href="10" target="_blank"># Atividade_10 #</a> § Formatação de link, tags nav,header e footer § <br>
 
 
     </div>
