--- a/10/index.html
+++ b/10/index.html
@@ -82,6 +82,7 @@
 <body>
 
 <header>
+    <img src="https://i.pinimg.com/originals/26/91/f2/2691f2fa1a0f078f5f274edf7fea6763.png"/>
     <h1>News</h1>
 </header>
 
@@ -129,7 +130,7 @@
         <img src="https://cdn6.campograndenews.com.br/uploads/noticias/2024/07/18/2a9e1815ab378d98abd0863c31434616dac225b5.jpg" alt="Notícia 4">
         <h2>R7.com</h2>
         <p>Com Palmeiras x Flamengo, sorteio define oitavas de final da Copa do Brasil.</p>
-        <p class="timestamp">Postado por: Autor 4 | 18/07/2024</p>
+        <p class="timestamp">Postado por: Jorge Amadeu| 18/07/2024</p>
         <a href="#">Leia mais</a>
     </div>
 </div>
