--- a/10/index.html
+++ b/10/index.html
@@ -82,7 +82,7 @@
 <body>
 
 <header>
-    <img src="https://i.pinimg.com/originals/26/91/f2/2691f2fa1a0f078f5f274edf7fea6763.png"/>
+    <img src="https://i.pinimg.com/originals/26/91/f2/2691f2fa1a0f078f5f274edf7fea6763.png">
     <h1>News</h1>
 </header>
 
