--- a/10/index.html
+++ b/10/index.html
@@ -11,6 +11,10 @@
             padding: 0;
             background-color: #f0f0f0;
         }
+        .logotitle{
+            width: 50px;
+            height: 50px;
+        }
         header, footer {
             text-align: center;
             padding: 10px;
@@ -82,7 +86,7 @@
 <body>
 
 <header>
-    <img src="https://i.pinimg.com/originals/26/91/f2/2691f2fa1a0f078f5f274edf7fea6763.png">
+    <img class="logotitle" src="https://i.pinimg.com/originals/26/91/f2/2691f2fa1a0f078f5f274edf7fea6763.png">
     <h1>News</h1>
 </header>
 
