--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             width: 80%;
             max-width: 600px;
             border: 1px solid #ddd;
-            border-radius: 8px;
-            text-align: center;
+            border-radius: 9px;
+            text-align: left;
 }
 
 .link a:hover {
