--- a/12/index.html
+++ b/12/index.html
@@ -22,7 +22,8 @@
         .pessoa::after {
             content: 'depois' ;
         }
-
+</style>
+</head>
   <body>
     <ul>
         <li class="pessoa" onclick="mostrarvalor(this)" data-idade="20" data-cpf="999">João</li>
@@ -30,5 +31,4 @@
         <li class="pessoa" onclick="mostrarvalor(this)" data-idade="40" data-cpf="777">Maria</li>
     </ul>
 </body>
-
-  
+</html>
