--- a/12/index.html
+++ b/12/index.html
@@ -26,7 +26,9 @@
 </style>
 </head>
   <body>
-    <ul>
+      <title>§ Atividade 12ª §</title>
+   
+      <ul>
         <li class="pessoa" onclick="mostrarvalor(this)" data-idade="20" data-cpf="999">João</li>
         <li class="pessoa" onclick="mostrarvalor(this)" data-idade="30" data-cpf="888">José</li>
         <li class="pessoa" onclick="mostrarvalor(this)" data-idade="40" data-cpf="777">Maria</li>
