--- a/12/index.html
+++ b/12/index.html
@@ -7,7 +7,7 @@
       function mostrarvalor(componente){
             var valor = componente.getAttribute('data-idade');
             alert(valor);
-       = }
+  }
     </script>
    <style>
         .pessoa{
@@ -16,17 +16,16 @@
         .pessoa[data-idade='30']{
             color: blue;
         }
-        .pessoa::before {
-            content: 'Nome:'; 
+        .pessoa:: before {
+            content: ' Nome: '; 
         }
-       .pessoa::before {
+       .pessoa:: after {
             content: '- Idade:' attr(data-idade) '- C.P.F: ' attr(data-cpf);
             position: absolute;
            }
 </style>
 </head>
   <body>
-      <title>§ Atividade 12ª §</title>
    
       <ul>
         <li class="pessoa" onclick="mostrarvalor(this)" data-idade="20" data-cpf="999">João</li>
