--- a/12/index.html
+++ b/12/index.html
@@ -27,9 +27,9 @@
 </head>
 <body>
     <ul>
-        <li class="pessoa" onclick="mostrarvalor(this)" data-idade="25" data-cpf="999">João</li>
-        <li class="pessoa" onclick="mostrarvalor(this)" data-idade="35" data-cpf="888">Vitória</li>
-        <li class="pessoa" onclick="mostrarvalor(this)" data-idade="45" data-cpf="777">Maria</li>
+        <li class="pessoa" onclick="mostrarvalor(this)" data-idade="25" data-cpf="577.391.300-36">João</li>
+        <li class="pessoa" onclick="mostrarvalor(this)" data-idade="35" data-cpf="651.613.760-90">Vitória</li>
+        <li class="pessoa" onclick="mostrarvalor(this)" data-idade="45" data-cpf="448.004.570-84">Maria</li>
     </ul>  
 </body>
 </html>
