--- a/index.html
+++ b/index.html
@@ -71,15 +71,17 @@
         <hr>
         <a href="9" target="_blank"># Atividade_09 #</a> § Posicionamento § <br>
         <hr>
-        <a href="10" target="_blank"># Atividade_10 #</a> § Formatação de link, tags nav, header e footer § <br>
+        <a href="10" target="_blank"># Atividade_10 #</a> § Formatação de link, tags nav, header & footer § <br>
         <hr>
         <a href="11" target="_blank"># Atividade_11 #</a> § <br>
         <hr>
         <a href="12" target="_blank"># Atividade_12 #</a> § Atributo de Data § <br>
         <hr>
-        <a href="13" target="_blank"># Atividade_13 #</a> § <br>
+        <a href="13" target="_blank"># Atividade_13 #</a> § Introdução ao CSS3 § <br>
         <hr>
-        <a href="14" target="_blank"># Atividade_14 #</a> § <br>
+        <a href="14" target="_blank"># Atividade_14 #</a> § Transparências, Sombras & Gradientes § <br>
+        <hr>
+        <a href="15" target="_blank"># Atividade_15 #</a> § <br>
     </div>
 
 
