--- a/13/index.html
+++ b/13/index.html
@@ -47,16 +47,28 @@
          margin-right: 200px;
         padding: 1px;
      }
-      
+
+    .image{ 
+        background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
+         background-color: #ffdcdcfb;
+         font-family:'Times New Roman', Times, serif;
+         font-style: italic;
+         text-align:left;
+         margin-left: 200px;
+         margin-right: 200px;
+         padding: 1px;
+          }
     </style>
   </head>
   
   <body>
         <div class="texto">
-          <div
+        <div
             <a href="box-sizing.html"><h2>box-sizing</h2></a>
         </div>
+        </div>
         <div class="texto">
+            <div
             <a href="cantosarredondados.html"><h2>Cantos Arredondados</h2></a>
         </div>  
         </div>
