--- a/13/index.html
+++ b/13/index.html
@@ -47,8 +47,7 @@
          margin-right: 200px;
         padding: 1px;
      }
-
-    .image{ 
+.image{ 
         background: linear-gradient(to right,#ffdcdcfb, #f73572a6);
          background-color: #ffdcdcfb;
          font-family:'Times New Roman', Times, serif;
@@ -62,16 +61,12 @@
   </head>
   
   <body>
-        <div class="texto">
         <div
-            <a href="box-sizing.html"><h2>box-sizing</h2></a>
+            <a href="box_sizing.html"><h2>box-sizing</h2></a>
         </div>
-        </div>
-        <div class="texto">
-            <div
+        <div
             <a href="cantosarredondados.html"><h2>Cantos Arredondados</h2></a>
         </div>  
-        </div>
   </body>
 </html>
   
