--- a/13/index.html
+++ b/13/index.html
@@ -57,15 +57,19 @@
          margin-right: 200px;
          padding: 1px;
           }
+    
     </style>
   </head>
   
   <body>
         <div
-            <a href="box_sizing.html"><h2>box-sizing</h2></a>
+         <a href="box_sizing.html">
+                <h2> Box-sizing </h2>
+            </a>
         </div>
         <div
-            <a href="cantosarredondados.html"><h2>Cantos Arredondados</h2></a>
+          <a href="CantoAredondado/index.html">
+                <h2> Canto Aredondado </h2> </a>
         </div>  
   </body>
 </html>
