--- a/13/index.html
+++ b/13/index.html
@@ -68,7 +68,7 @@
             </a>
         </div>
         <div
-          <a href="cantoaredondado.html">
+          <a href="cantoarredondado.html">
                 <h2> Canto Aredondado </h2> </a>
         </div>  
   </body>
