--- a/13/index.html
+++ b/13/index.html
@@ -57,20 +57,34 @@
          margin-right: 200px;
          padding: 1px;
           }
+      .container p{
+            clear: both;
+            padding: 9px;
+            align-content: center;
+        }
+        }
+        .card{
+            border: 1px solid black;
+            text-align: center;
+            font-size: 12px;
+            padding: 6px;
+            margin: 12px;
     
     </style>
   </head>
   
   <body>
-        <div
+        <div class="container">
+        <div class="card">
          <a href="box_sizing.html">
                 <h2> Box-sizing </h2>
             </a>
         </div>
-        <div
-          <a href="cantoarredondado.html">
+         <div class="card">
+         <a href="cantoarredondado.html">
                 <h2> Canto Aredondado </h2> </a>
         </div>  
+        </div>
   </body>
 </html>
   
